@@ -1,3 +1,12 @@
+2009-02-02  Badlop  <badlop@process-one.net>
+
+	* src/web/ejabberd_web_admin.erl: Calls to the hook
+	webadmin_menu_node provide the node as first argument, and calls
+	to webadmin_menu_hostnode provide both the host and the node. Fix
+	call to make_menu_items, because webadmin_menu_node was called in
+	cases where webadmin_menu_hostnode should be called. Align to
+	right some table elements.
+
 2009-01-31  Badlop  <badlop@process-one.net>
 
 	* doc/guide.tex: Provide only an example of language option
